[gd_scene load_steps=8 format=3 uid="uid://btpsrhej4yvr3"]

[ext_resource type="Script" path="res://levels/cat_tree/broom.gd" id="1_2si25"]
[ext_resource type="Texture2D" uid="uid://b1bmfydg4fcfm" path="res://levels/cat_tree/sprites/events/broom.png" id="2_6qfdb"]
[ext_resource type="AudioStream" uid="uid://b6rwlj6m7isg" path="res://levels/cat_tree/sfx/events/broom.wav" id="3_adg8x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rkiti"]
size = Vector2(380, 312)

[sub_resource type="Animation" id="Animation_6a58k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BroomSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-64, 345)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BroomSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.2, 1.2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BroomSprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_f1gdm"]
resource_name = "broom_incoming"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BroomSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(4.5, 4.5), Vector2(1.2, 1.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BroomSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-297, 1788), Vector2(-73, 413)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BroomSprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.780392)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e8ir5"]
_data = {
"RESET": SubResource("Animation_6a58k"),
"broom_incoming": SubResource("Animation_f1gdm")
}

[node name="Broom" type="Node2D"]
script = ExtResource("1_2si25")
metadata/_edit_lock_ = true

[node name="BroomSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(-64, 345)
rotation = -2.91509
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_6qfdb")
metadata/_edit_lock_ = true

[node name="BroomTriggerArea" type="Area2D" parent="."]
collision_layer = 16
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BroomTriggerArea"]
position = Vector2(15, 9)
shape = SubResource("RectangleShape2D_rkiti")
debug_color = Color(0, 0.6, 0.701961, 0)
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e8ir5")
}

[node name="BroomSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_adg8x")
volume_db = 15.0
bus = &"SFX"

[connection signal="body_entered" from="BroomTriggerArea" to="." method="_on_area_2d_body_entered"]
